--- a/www/index.html
+++ b/www/index.html
@@ -104,17 +104,17 @@
                             <div class="form-group">
                                 <label for="username" style="font-weight: bold; color: #42ec98;">USERNAME:</label><br>
                                 <div class="border-bottom-1">
-                                  <input type="text" name="username" id="username" class="form-control form-control-plaintext" placeholder="Isi username...." style="border:0px solid">
+                                  <input type="text" name="username" id="username" class="form-control form-control-plaintext" placeholder="Isi username...." style="border:0px solid;width: 100%">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="password" style="font-weight: bold; color: #42ec98;">PASSWORD:</label><br>
                                 <div class="border-bottom border-bottom-1">
-                                  <input type="password" name="password" id="password" class="form-control form-control-plaintext" placeholder="Isi password" style="border-width:0px">
+                                  <input type="password" name="password" id="password" class="form-control form-control-plaintext" placeholder="Isi password" style="border-width:0px;width: 100%">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="button" name="submit" class="btnSubmit float-right" value="LOGIN" onclick="location.href = 'homepage.html'">
+                                <input type="button" name="submit" class="btnSubmit float-right" value="LOGIN" onclick="window.location.replace( 'homepage.html' )">
                             </div>
                         </form>
                     </div>
