--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -38,12 +38,13 @@
     -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *" /> -->
 
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <link rel="stylesheet" href='/css/bootstrap.min.css'>
-      <link rel="stylesheet" href='/css/iziToast.min.css'>
-      <script src='/js/jquery.min.js'></script>
-      <script src='/js/bootstrap.min.js'></script>
-      <script src='/js/iziToast.min.js'></script>
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" href='./css/bootstrap.min.css'>
+      <link rel="stylesheet" href='./css/iziToast.min.css'>
+      <script src='./js/jquery.min.js'></script>
+      <script src='./js/bootstrap.min.js'></script>
+      <script src='./js/iziToast.min.js'></script>
+      
     <title>Hello World</title>
 </head>
 
@@ -104,17 +105,17 @@
                             <div class="form-group">
                                 <label for="username" style="font-weight: bold; color: #42ec98;">USERNAME:</label><br>
                                 <div class="border-bottom-1">
-                                  <input type="text" name="username" id="username" class="form-control form-control-plaintext" placeholder="Isi username...." style="border:0px solid;width: 100%">
+                                  <input type="text" name="username" id="username" class="form-control form-control-plaintext" placeholder="Isi username...." style="border:0px solid;width:100%">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="password" style="font-weight: bold; color: #42ec98;">PASSWORD:</label><br>
                                 <div class="border-bottom border-bottom-1">
-                                  <input type="password" name="password" id="password" class="form-control form-control-plaintext" placeholder="Isi password" style="border-width:0px;width: 100%">
+                                  <input type="password" name="password" id="password" class="form-control form-control-plaintext" placeholder="Isi password" style="border-width:0px;width:100%">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="button" name="submit" class="btnSubmit float-right" value="LOGIN" onclick="window.location.replace( 'homepage.html' )">
+                                <input type="button" name="submit" class="btnSubmit float-right" value="LOGIN" id='login-btn'>
                             </div>
                         </form>
                     </div>
@@ -130,6 +131,13 @@
     <script type="text/javascript">
         app.initialize();
     </script>
+    <script>
+        document.getElementById('login-btn').onclick = function() {
+            alert('Login');
+            location.href = 'homepage.html';
+        }
+    </script>
+    
 </body>
 
 </html>
