--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -134,7 +134,7 @@
     <script>
         document.getElementById('login-btn').onclick = function() {
             alert('Login');
-            location.href = 'homepage.html';
+            window.open('file:///homepage.html');
         }
     </script>
     
