Bismillah pasti bisa

--- a/www/index.html
+++ b/www/index.html
@@ -134,7 +134,7 @@
     <script>
         document.getElementById('login-btn').onclick = function() {
             alert('Login');
-            window.open('file:///homepage.html');
+            window.open('homepage.html');
         }
     </script>
     
