Konfigurasi menu manasik

--- a/platforms/android/app/src/main/assets/www/homepage.html
+++ b/platforms/android/app/src/main/assets/www/homepage.html
@@ -5,27 +5,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="asset/img/icon-pusat-riyal.png">
-
 	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/alamraya-style.css">
 
 </head>
 <body>
+	<section class="menu-header" style="background: #105e42">
+		<button type="button" class="btn pull-left" id="btn-menu">
+			<span></span>		
+			<span></span>
+			<span></span>
+		</button>
+		<button class="btn pull-right text-alamraya" type="button">
+			<i class="fa fa-bell-o"></i>
+		</button>
+	</section>
 	<div class="screen-width-phone">
 		<div class="bg-top">
 			
 		</div>
-		<section class="menu-header">
-			<button type="button" class="btn pull-left" id="btn-menu">
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-			<button class="btn pull-right text-alamraya" type="button">
-				<i class="fa fa-bell-o"></i>
-			</button>
-		</section>
 		<section class="sidebar">
 			<div class="sidebar-header">
 				<a href="">
