--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -128,14 +128,12 @@
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="config/config.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>
     <script>
-        document.getElementById('login-btn').onclick = function() {
-            alert('Login');
-            window.open('file:///homepage.html');
-        }
+        
     </script>
     
 </body>
