--- a/www/index.html
+++ b/www/index.html
@@ -126,18 +126,10 @@
 
         </div>
     </div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="config/config.js"></script>
     <script type="text/javascript">
-        app.initialize();
-    </script>
-
-<!-- Login script -->
-<script type="text/javascript">
   var pathname = location.pathname;
-  if(pathname == '/' || pathname == '/') {
-    window.open('index.html');
+  if(pathname == '/' || pathname == '') {
+    location.href = 'index.html';
   }
   $('#login-btn').on('click', function() {
     loginUser();
@@ -182,7 +174,16 @@
       }
     });
   }
-</script>
+</script>       
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="config/config.js"></script>
+    <script type="text/javascript">
+        app.initialize();
+    </script>
+
+<!-- Login script -->
+
     <!-- <script>
         document.getElementById('login-btn').onclick = function() {
             alert('Login');
