--- a/www/homepage.html
+++ b/www/homepage.html
@@ -5,111 +5,66 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="asset/img/icon-pusat-riyal.png">
-	<link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="asset/css/alamraya-style.css">
+	<link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./node_modules/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./asset/css/alamraya-style.css">
 
 </head>
 <body>
+	<div class="bg-top"></div>
+	<div class="bg-bottom"></div>
+	<section class="sidebar">
+				<div class="sidebar-header">
+					<a href="#">
+						<img src="asset/logo-pusat-riyal.png" width="170px" height="auto">
+					</a>
+				</div>
+				<ul>
+					<li>
+						<a href="#">Profile</a>
+					</li>
+					<li>
+						<a href="#">Credit</a>
+					</li>
+					<li>
+						<a href="#">Logout</a>
+					</li>
+				</ul>
+			</section>
+	<div class="sidebar-menu-off"></div>
 	<section class="menu-header" style="background: #105e42">
-		<button type="button" class="btn pull-left" id="btn-menu">
-			<span></span>		
-			<span></span>
-			<span></span>
+		<button type="button" class="btn text-alamraya" id="btn-menu">
+			<i class="fa fa-bars"></i>
 		</button>
-		<button class="btn pull-right text-alamraya" type="button">
+		<button type="button" class="btn text-alamraya" id="btn-backward" style="display:none">
+			<i class="fa fa-chevron-left"></i>
+		</button>
+		<button class="btn text-alamraya" type="button">
 			<i class="fa fa-bell-o"></i>
 		</button>
 	</section>
-	<div class="screen-width-phone">
-		<div class="bg-top">
-			
-		</div>
-		<section class="sidebar">
-			<div class="sidebar-header">
-				<a href="">
-					<img src="asset/logo-pusat-riyal.png" width="170px" height="auto">
-				</a>
-			</div>
-			<ul>
-				<li>
-					<a href="#">Profile</a>
-				</li>
-				<li>
-					<a href="#">Credit</a>
-				</li>
-				<li>
-					<a href="#">Logout</a>
-				</li>
-			</ul>
-		</section>
-		<div class="sidebar-menu-off">
-			
-		</div>
-		<div class="content">
-
-				<div class="row">
-					
-					<div class="col-md-3 col-6 mt-5">
-						<a href="" class="text-dark">
-							<div class="card text-center">
-								<div class="card-body card-body-custom">
-									<img src="asset/icon/distribution.png" width="64px" height="64px">
-									<h6>Distribusi</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-md-3 col-6 mt-5">
-						<a href="" class="text-dark">
-							<div class="card text-center">
-								<div class="card-body card-body-custom">
-									<img src="asset/icon/box.png" width="64px" height="64px">
-									<h6>Produksi</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-md-3 col-6 mt-5">
-						<a href="" class="text-dark">
-							<div class="card text-center">
-								<div class="card-body card-body-custom">
-									<img src="asset/icon/airplane.png" width="64px" height="64px">
-									<h6>Manasik</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="col-md-3 col-6 mt-5">
-						<a href="" class="text-dark">
-							<div class="card text-center">
-								<div class="card-body card-body-custom">
-									<img src="asset/icon/document.png" width="64px" height="64px">
-									<h6>Otorisasi</h6>
-								</div>
-							</div>
-						</a>
-					</div>
-
-				</div>
-		</div>
-		<div class="bg-bottom">
-			
-		</div>
-	</div>
+	<content>
+		
+	</content>
 
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="config/routing.js"></script>
+	<script type="text/javascript" src="js/features/logout.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function(){
 			$('#btn-menu, .sidebar-menu-off').click(function(){
 				$('body').toggleClass('sidebar-collapse');
 			});
+
+			$('#btn-backward').click(function(){
+				Routing.backward();
+			});
+			Routing.init('content');
 		});
 	</script>
+
+	
 </body>
 </html>
