logo sidebar fixed

--- a/platforms/browser/www/homepage.html
+++ b/platforms/browser/www/homepage.html
@@ -16,7 +16,7 @@
 	<section class="sidebar">
 				<div class="sidebar-header">
 					<a href="#">
-						<img src="asset/logo-pusat-riyal.png" width="170px" height="auto">
+						<img src="asset/img/logo-pusat-riyal.png" width="170px" height="auto">
 					</a>
 				</div>
 				<ul>
