--- a/www/homepage.html
+++ b/www/homepage.html
@@ -27,7 +27,7 @@
 						<a href="#">Credit</a>
 					</li>
 					<li>
-						<a href="#">Logout</a>
+						<a href="#" id="logout-btn">Logout</a>
 					</li>
 				</ul>
 			</section>
@@ -44,9 +44,9 @@
 		</button>
 	</section>
 	<content>
-		
-	</content>
 
+	</content>
+	<script type="text/javascript" src="config/config.js"></script>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 	<script type="text/javascript" src="config/routing.js"></script>
@@ -65,6 +65,6 @@
 		});
 	</script>
 
-	
+
 </body>
 </html>
