view perencanaan manasik & hapus done

--- a/www/homepage.html
+++ b/www/homepage.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./node_modules/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./asset/css/alamraya-style.css">
+	<link rel="stylesheet" type="text/css" href="./css/iziToast.min.css">
 	<link rel="stylesheet" type="text/css" href="./asset/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 	<style>
 		.rounded-btn {
@@ -84,6 +85,7 @@
 	<script type="text/javascript" src="config/config.js"></script>
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/iziToast.min.js"></script>
 	<script type="text/javascript" src="bootstrap-datetimepicker/js/moment.js"></script>
 	<script type="text/javascript" src="bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 	<script type="text/javascript" src="config/config.js"></script>
