--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -174,7 +174,7 @@ $(window).error(function(e){
                 store.setItem('m_name', response.m_name);
                 store.setItem('m_id', response.m_id);
 
-                // window.open('homepage.html');
+                window.open('homepage.html');
             }
         },
         error: function(jqXHR, exception) {
