--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -170,11 +170,11 @@ $(window).error(function(e){
                 store.setItem('access_token', response.access_token);
                 store.setItem('refresh_token', response.refresh_token);
                 store.setItem('token_type', response.token_type);
-                store.setItem('m_name', response.m_username);
+                store.setItem('m_username', response.m_username);
                 store.setItem('m_name', response.m_name);
                 store.setItem('m_id', response.m_id);
 
-                window.open('homepage.html');
+                // window.open('homepage.html');
             }
         },
         error: function(jqXHR, exception) {
