--- a/www/homepage.html
+++ b/www/homepage.html
@@ -299,6 +299,8 @@
 			  onDeviceReady(); //this is the browser
 			});
 		}
+
+		user_comp = localStorage.getItem('m_comp_id');
 	</script>
 </body>
 </html>
