--- a/platforms/android/app/src/main/assets/www/homepage.html
+++ b/platforms/android/app/src/main/assets/www/homepage.html
@@ -114,7 +114,7 @@
 	<script type="text/javascript" src="js/features/logout.js"></script>
 	<script type="text/javascript" src="js/notification/SmartNotification.min.js"></script>
 
-	<script type="text/javascript">
+	<script type="text/javascript">	
 		loading_icon = $('#loading_icon');
 		iziToast.settings({
 			position:'topRight'//Where it will be shown. It can be bottomRight, bottomLeft, topRight, topLeft, topCenter, bottomCenter or center.
@@ -302,11 +302,11 @@
 			});
 		}
 
-		user_comp = localStorage.getItem('m_comp_id');
+		var user_comp = localStorage.getItem('m_comp_id');
 
-		interval;
-  	latitude;
-  	longitude;
+		var interval;
+  	var latitude;
+  	var longitude;
   	function start(sr_id){
   		geo();
   		updatestatus(sr_id, 'start');
